# RayTracing

./: BlockingQueue.h  CMakeCache.txt  CMakeLists.txt  README.md  ThreadPool.h  input.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  main.cpp  run-main  run-test.sh
figures/: Figure.h  Quadrangle.h  Sphere.h  Triangle.h
geometry/: Geometry.cpp  Geometry.h
rendering/: Image.cpp  Image.h  RGB.cpp  RGB.h  Reader.h
scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Spot.cpp  Spot.h
